[package]
name = "aoc-2022"
description = "Advent of Code 2022!"
version = "2022.0.0"
edition = "2021"

[dependencies]

[[example]]
name = "day1-1"
path = "src/day1/part1.rs"

[[example]]
name = "day1-2"
path = "src/day1/part2.rs"

[[example]]
name = "day2-1"
path = "src/day2/part1.rs"

[[example]]
name = "day2-2"
path = "src/day2/part2.rs"

[[example]]
name = "day3-1"
path = "src/day3/part1.rs"

[[example]]
name = "day3-2"
path = "src/day3/part2.rs"

[[example]]
name = "day4-1"
path = "src/day4/part1.rs"

[[example]]
name = "day4-2"
path = "src/day4/part2.rs"