[package]
name = "ac22"
description = "advent of code '22"
version = "2022.0.0"
edition = "2021" # ironic

[dependencies]

[[example]]
name = "day1-1"
path = "src/day1/part1.rs"

[[example]]
name = "day1-2"
path = "src/day1/part2.rs"

[[example]]
name = "day2-1"
path = "src/day2/part1.rs"

[[example]]
name = "day2-2"
path = "src/day2/part2.rs"

[[example]]
name = "day3-1"
path = "src/day3/part1.rs"

[[example]]
name = "day3-2"
path = "src/day3/part2.rs"

[[example]]
name = "day4-1"
path = "src/day4/part1.rs"

[[example]]
name = "day4-2"
path = "src/day4/part2.rs"

[[example]]
name = "day5-1"
path = "src/day5/part1.rs"

[[example]]
name = "day5-2"
path = "src/day5/part2.rs"

[[example]]
name = "day6-1"
path = "src/day6/part1.rs"

[[example]]
name = "day6-2"
path = "src/day6/part2.rs"

[[example]]
name = "day7-1"
path = "src/day7/part1.rs"

[[example]]
name = "day7-2"
path = "src/day7/part2.rs"

[[example]]
name = "day8-1"
path = "src/day8/part1.rs"

[[example]]
name = "day8-2"
path = "src/day8/part2.rs"

[[example]]
name = "day9-1"
path = "src/day9/part1.rs"

[[example]]
name = "day9-2"
path = "src/day9/part2.rs"

[[example]]
name = "day10-1"
path = "src/day10/part1.rs"

[[example]]
name = "day10-2"
path = "src/day10/part2.rs"